[gd_scene load_steps=2 format=3 uid="uid://cyxrqx7w7x0x1"]

[ext_resource type="Script" uid="uid://6aj40qujtdu2" path="res://scripts/ui/RestScene.gd" id="1_tuvwx"]

[node name="RestScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tuvwx")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Rest Area"
horizontal_alignment = 1

[node name="PartyStatusGrid" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 5
#Onecolumnperpartymemberalignment = 1
"#PlaceholderforPartyMemberStatusdisplayinrestscene[nodename" = "Member1Stats"
type = "VBoxContainer"
parent = "VBoxContainer/PartyStatusGrid"
"]layout_mode" = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/PartyStatusGrid/Member1Stats"]
layout_mode = 2
text = "Member 1
HP: 80/100
H: 50/100
T: 60/100
F: 30/100"
#Hunger,Thirst,Fatiguehorizontal_alignment = 1

[node name="Member2Stats" type="VBoxContainer" parent="VBoxContainer/PartyStatusGrid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/PartyStatusGrid/Member2Stats"]
layout_mode = 2
text = "Member 2
HP: -/-
H: -/-
T: -/-
F: -/-"
horizontal_alignment = 1

[node name="Member3Stats" type="VBoxContainer" parent="VBoxContainer/PartyStatusGrid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/PartyStatusGrid/Member3Stats"]
layout_mode = 2
text = "Member 3
HP: -/-
H: -/-
T: -/-
F: -/-"
horizontal_alignment = 1

[node name="Member4Stats" type="VBoxContainer" parent="VBoxContainer/PartyStatusGrid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/PartyStatusGrid/Member4Stats"]
layout_mode = 2
text = "Member 4
HP: -/-
H: -/-
T: -/-
F: -/-"
horizontal_alignment = 1

[node name="Member5Stats" type="VBoxContainer" parent="VBoxContainer/PartyStatusGrid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/PartyStatusGrid/Member5Stats"]
layout_mode = 2
text = "Member 5
HP: -/-
H: -/-
T: -/-
F: -/-"
horizontal_alignment = 1

[node name="FoodDrinkPanel" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="FoodLabel" type="Label" parent="VBoxContainer/FoodDrinkPanel"]
layout_mode = 2
text = "Available Food/Drink:"

[node name="FoodCard1Button" type="Button" parent="VBoxContainer/FoodDrinkPanel"]
layout_mode = 2
text = "Use Ration (H+20)"
"#CorrectedtoHforHungerbasedonscript#Addmorefood/drinkcardbuttonsoralisthere[nodename" = "RestProgressLabel"
type = "Label"
parent = "VBoxContainer"
"]layout_mode" = 2
text = "Resting... (Placeholder Animation)"
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continue Journey"

[connection signal="pressed" from="VBoxContainer/FoodDrinkPanel/FoodCard1Button" to="." method="_on_use_food_drink_pressed" binds= [{
"name": "Ration",
"target_stat": "hunger",
"type": "food",
"value": 20
}]]
[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
